Longer socket timeout