@@ -47,3 +47,11 @@ Følgende data bliver kopieret til databasen:
 - Centroide
     
 Ovenstående kommando kan indsættes i en job scheduler og køres en gang om dag.
+
+### Note om hukommelsesforbrug
+Kortforsyningens Atom feed publicerer alle data for et ejerlav i et stort XML dokument. For de største ejerlav kan dette dokument være relativt stort og indlæsningen kræver en vis mængde hukommelse.   
+Det anbefales at have min. 4GB til rådighed. Endvidere kan det være en fordel at vælge garbage collector'en "Concurrent Mark Sweep (CMS) Collector", som gøres på denne måde: 
+
+```
+java -jar -XX:+UseConcMarkSweepGC AtomMatrikel.jar config.yml
+```
